[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD/Temp/RecruitmentPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD/Temp/BuildPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD/Temp/OldQueueElement.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/Temp/OwnedContextMenu.gd" type="Script" id=4]
[ext_resource path="res://HUD/Temp/OwnedHexContextMenu.gd" type="Script" id=5]
[ext_resource path="res://HUD/Temp/OwneIslandContextMenu.gd" type="Script" id=6]
[ext_resource path="res://HUD/Temp/TabContainer.gd" type="Script" id=7]
[ext_resource path="res://HUD/Temp/AttackMenu.gd" type="Script" id=8]


[node name="OwnedContextMenu" type="Control"]
margin_right = 393.0
margin_bottom = 384.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 1.80499
margin_top = 158.843
margin_right = 389.805
margin_bottom = 381.843
tab_align = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hex" type="PanelContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
mouse_filter = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
build_panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Hex"]
margin_left = 7.0
margin_top = 7.0
margin_right = 373.0
margin_bottom = 180.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Hex/MarginContainer"]
margin_right = 366.0
margin_bottom = 173.0
mouse_filter = 2

[node name="NameAndLocation" type="VBoxContainer" parent="TabContainer/Hex/MarginContainer/VBoxContainer"]
margin_right = 366.0
margin_bottom = 40.0
mouse_filter = 2

[node name="IslandName" type="Label" parent="TabContainer/Hex/MarginContainer/VBoxContainer/NameAndLocation"]
margin_right = 366.0
margin_bottom = 14.0
text = "Island of Thrasatauw"
align = 1

[node name="HexLocation" type="Label" parent="TabContainer/Hex/MarginContainer/VBoxContainer/NameAndLocation"]
margin_top = 18.0
margin_right = 366.0
margin_bottom = 32.0
text = "Hex (0,0)"
align = 1

[node name="HSeparator" type="HSeparator" parent="TabContainer/Hex/MarginContainer/VBoxContainer/NameAndLocation"]
margin_top = 36.0
margin_right = 366.0
margin_bottom = 40.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Hex/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 366.0
margin_bottom = 173.0
mouse_filter = 2
alignment = 1

[node name="HexIdentifiers" type="VBoxContainer" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 23.0
margin_right = 131.0
margin_bottom = 129.0
mouse_filter = 2

[node name="Production" type="VBoxContainer" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/HexIdentifiers"]
margin_right = 108.0
margin_bottom = 68.0
mouse_filter = 2

[node name="ProductionLabel" type="Label" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/HexIdentifiers/Production"]
margin_right = 108.0
margin_bottom = 14.0
text = "Production"
align = 1

[node name="Gold" type="Label" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/HexIdentifiers/Production"]
margin_top = 18.0
margin_right = 108.0
margin_bottom = 32.0
text = "Gold: 0"
align = 1

[node name="Corpses" type="Label" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/HexIdentifiers/Production"]
margin_top = 36.0
margin_right = 108.0
margin_bottom = 50.0
text = "Corpse: 0"
align = 1

[node name="Contagion" type="Label" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/HexIdentifiers/Production"]
margin_top = 54.0
margin_right = 108.0
margin_bottom = 68.0
text = "Contagion: 0"
align = 1

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/HexIdentifiers"]
margin_top = 72.0
margin_right = 108.0
margin_bottom = 76.0
mouse_filter = 2

[node name="Feature" type="VBoxContainer" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/HexIdentifiers"]
margin_top = 80.0
margin_right = 108.0
margin_bottom = 129.0

[node name="Title" type="Label" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/HexIdentifiers/Feature"]
margin_right = 108.0
margin_bottom = 14.0
text = "Whale Graveyard"
align = 1

[node name="Description" type="Label" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/HexIdentifiers/Feature"]
margin_top = 18.0
margin_right = 108.0
margin_bottom = 49.0
text = "+4 Corpses
+2 Contagion"

[node name="VSeparator" type="VSeparator" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 135.0
margin_right = 139.0
margin_bottom = 129.0
mouse_filter = 2

[node name="BuildingInfo" type="VBoxContainer" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 143.0
margin_right = 343.0
margin_bottom = 129.0
rect_min_size = Vector2( 200, 0 )
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/BuildingInfo"]
margin_top = 19.0
margin_right = 200.0
margin_bottom = 86.0

[node name="Buildings" type="Label" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/BuildingInfo/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Building:"
align = 1

[node name="BuildingName" type="Label" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/BuildingInfo/VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 32.0
text = "Osseorium"
align = 1

[node name="BuildingDescription" type="Label" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/BuildingInfo/VBoxContainer"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 67.0
text = "Allows the construction of 
more advanced undead"
align = 1
autowrap = true

[node name="BuildButton" type="Button" parent="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/BuildingInfo"]
margin_top = 90.0
margin_right = 200.0
margin_bottom = 110.0
mouse_filter = 1
text = "Build"

[node name="Island" type="PanelContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
mouse_filter = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
RecruitPanel = ExtResource( 1 )
QueueLine = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Island"]
margin_left = 7.0
margin_top = 7.0
margin_right = 373.0
margin_bottom = 180.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Island/MarginContainer"]
margin_right = 366.0
margin_bottom = 173.0

[node name="BasicInformation" type="VBoxContainer" parent="TabContainer/Island/MarginContainer/HBoxContainer"]
margin_right = 95.0
margin_bottom = 173.0

[node name="IslandName" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/BasicInformation"]
margin_right = 95.0
margin_bottom = 14.0
text = "Island of Kurds"
align = 1

[node name="IslandSize" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/BasicInformation"]
margin_top = 18.0
margin_right = 95.0
margin_bottom = 32.0
text = "Size: 4"
align = 1

[node name="HSeparator" type="HSeparator" parent="TabContainer/Island/MarginContainer/HBoxContainer/BasicInformation"]
margin_top = 36.0
margin_right = 95.0
margin_bottom = 40.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProductionTitle" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/BasicInformation"]
margin_top = 44.0
margin_right = 95.0
margin_bottom = 58.0
text = "Production:"
align = 1

[node name="GoldProduction" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/BasicInformation"]
margin_top = 62.0
margin_right = 95.0
margin_bottom = 76.0
text = "Gold: 4"
align = 1

[node name="CorpsesProduction" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/BasicInformation"]
margin_top = 80.0
margin_right = 95.0
margin_bottom = 94.0
text = "Corpses: 4"
align = 1

[node name="ContagionProduction" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/BasicInformation"]
margin_top = 98.0
margin_right = 95.0
margin_bottom = 112.0
text = "Contagion: 4"
align = 1

[node name="VSeparator" type="VSeparator" parent="TabContainer/Island/MarginContainer/HBoxContainer"]
margin_left = 99.0
margin_right = 103.0
margin_bottom = 173.0
mouse_filter = 1

[node name="UndeadInfo" type="VBoxContainer" parent="TabContainer/Island/MarginContainer/HBoxContainer"]
margin_left = 107.0
margin_right = 202.0
margin_bottom = 173.0

[node name="InfoTitle" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo"]
margin_right = 95.0
margin_bottom = 14.0
text = "Undead Forces"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo"]
margin_top = 18.0
margin_right = 95.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 1
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo/ScrollContainer"]
margin_right = 78.0
margin_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo/ScrollContainer/VBoxContainer"]
margin_right = 78.0
margin_bottom = 14.0

[node name="Zombies" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0
text = "Zombies: "

[node name="ZombiesNum" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 76.0
margin_bottom = 14.0
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo/ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 78.0
margin_bottom = 32.0

[node name="Skeletons" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 66.0
margin_bottom = 14.0
text = "Skeletons:"

[node name="SkeletonsNum" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 70.0
margin_right = 78.0
margin_bottom = 14.0
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo/ScrollContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 78.0
margin_bottom = 50.0

[node name="Supers" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_right = 47.0
margin_bottom = 14.0
text = "Supers:"

[node name="SupersNum" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/UndeadInfo/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 51.0
margin_right = 59.0
margin_bottom = 14.0
text = "0"

[node name="VSeparator2" type="VSeparator" parent="TabContainer/Island/MarginContainer/HBoxContainer"]
margin_left = 206.0
margin_right = 210.0
margin_bottom = 173.0
mouse_filter = 1

[node name="FunctionButton" type="VBoxContainer" parent="TabContainer/Island/MarginContainer/HBoxContainer"]
margin_left = 214.0
margin_right = 366.0
margin_bottom = 173.0

[node name="RecruitmentCapacity" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/FunctionButton"]
margin_right = 152.0
margin_bottom = 14.0
text = "Recruitment Capacity: 2"

[node name="QueueCardPlaceholder" type="Control" parent="TabContainer/Island/MarginContainer/HBoxContainer/FunctionButton"]
margin_top = 18.0
margin_right = 152.0
margin_bottom = 18.0

[node name="ForcesButton" type="Button" parent="TabContainer/Island/MarginContainer/HBoxContainer/FunctionButton"]
visible = false
margin_top = 22.0
margin_right = 152.0
margin_bottom = 42.0
mouse_filter = 1
text = "Undead Forces"

[node name="RecruitButton" type="Button" parent="TabContainer/Island/MarginContainer/HBoxContainer/FunctionButton"]
margin_top = 22.0
margin_right = 152.0
margin_bottom = 42.0
mouse_filter = 1
text = "Recruit Undead"

[node name="AttackButton" type="Button" parent="TabContainer/Island/MarginContainer/HBoxContainer/FunctionButton"]
margin_top = 46.0
margin_right = 152.0
margin_bottom = 66.0
mouse_filter = 1
text = "Launch Attack"

[node name="Label" type="Label" parent="TabContainer/Island/MarginContainer/HBoxContainer/FunctionButton"]
margin_top = 70.0
margin_right = 152.0
margin_bottom = 84.0
text = "Queue"

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Island/MarginContainer/HBoxContainer/FunctionButton"]
margin_top = 88.0
margin_right = 152.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 50 )

[node name="QueueBox" type="VBoxContainer" parent="TabContainer/Island/MarginContainer/HBoxContainer/FunctionButton/ScrollContainer"]
margin_right = 128.0
margin_bottom = 14.0

[node name="QueueElement" parent="TabContainer/Island/MarginContainer/HBoxContainer/FunctionButton/ScrollContainer/QueueBox" instance=ExtResource( 3 )]
margin_right = 128.0

[node name="AttackMenu" type="PanelContainer" parent="."]
margin_left = 2.27936
margin_top = -0.0520325
margin_right = 395.279
margin_bottom = 155.948
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AttackMenu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 386.0
margin_bottom = 149.0

[node name="Label" type="Label" parent="AttackMenu/VBoxContainer"]
margin_right = 378.0
margin_bottom = 14.0
text = "At this point I'm sick of making menus."
align = 1

[node name="Label3" type="Label" parent="AttackMenu/VBoxContainer"]
margin_top = 18.0
margin_right = 378.0
margin_bottom = 32.0
text = "You are sending 3 Undead in your horde."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="AttackMenu/VBoxContainer"]
margin_top = 36.0
margin_right = 378.0
margin_bottom = 50.0
text = "Launch Attack?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="AttackMenu/VBoxContainer"]
margin_top = 54.0
margin_right = 378.0
margin_bottom = 74.0

[node name="Button" type="Button" parent="AttackMenu/VBoxContainer/HBoxContainer"]
margin_right = 34.0
margin_bottom = 20.0
mouse_filter = 1
text = "Yes"

[node name="Button2" type="Button" parent="AttackMenu/VBoxContainer/HBoxContainer"]
margin_left = 38.0
margin_right = 68.0
margin_bottom = 20.0
mouse_filter = 1
text = "No"

[node name="CancelAttackButton" type="Button" parent="AttackMenu/VBoxContainer"]
margin_top = 78.0
margin_right = 378.0
margin_bottom = 98.0
mouse_filter = 1
text = "Cancel"
[connection signal="mouse_entered" from="TabContainer" to="TabContainer" method="_on_TabContainer_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer" to="TabContainer" method="_on_TabContainer_mouse_exited"]
[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="TabContainer/Hex/MarginContainer/VBoxContainer/HBoxContainer/BuildingInfo/BuildButton" to="TabContainer/Hex" method="_on_BuildButton_pressed"]
[connection signal="pressed" from="TabContainer/Island/MarginContainer/HBoxContainer/FunctionButton/RecruitButton" to="TabContainer/Island" method="_on_RecruitButton_pressed"]
[connection signal="pressed" from="TabContainer/Island/MarginContainer/HBoxContainer/FunctionButton/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="mouse_entered" from="AttackMenu" to="TabContainer" method="_on_TabContainer_mouse_entered"]
[connection signal="mouse_exited" from="AttackMenu" to="TabContainer" method="_on_AttackMenu_mouse_exited"]
[connection signal="pressed" from="AttackMenu/VBoxContainer/CancelAttackButton" to="." method="_on_CancelAttackButton_pressed"]
